# larakit

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  version
.github/workflows/: create-release.yml  publish-to-pypi.yml  test-release.yml
larakit/: __init__.py  _core.py  corpus.py  counter.py  jtm.py  lang.py  math.py  mp.py  pipeline.py  progressbar.py  properties.py  shell.py  training.py
larakit/core/: __init__.py  namespace.py  pipeline.py  progressbar.py  state.py
larakit/core/lang/: __init__.py  language.py  language_direction.py  language_map.py  language_utils.py
larakit/corpus/: __init__.py  jtm.py  parallel.py  training.py
larakit/math/: __init__.py  sampling.py  sequence.py
larakit/sys/: __init__.py  io.py  mp.py  shell.py
src/larakit/: __init__.py  _core.py  _lang.py  lang.py  math.py  pipeline.py  progressbar.py  shell.py
src/larakit/corpus/: __init__.py  _base.py  _jtm.py  _parallel.py  _tmx.py  jtm.py  parallel.py
test/: __init__.py  __main__.py
test/corpus/: __init__.py  _base.py  jtm.py  parallel.py
tests/: __main__.py  lang.py
tests/corpus/: __init__.py  jtm.py  parallel.py  tmx.py
